@@ -4,14 +4,14 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id 'io.spring.dependency-management' version '1.1.5'
-    id 'org.springframework.boot' version '3.3.0'
+    id 'org.springframework.boot' version '3.5.14'
     id 'org.owasp.dependencycheck' version '9.2.0'
     id 'com.github.ben-manes.versions' version '0.51.0'
     id 'au.com.dius.pact' version '4.3.15'
-    id 'io.freefair.lombok' version '8.14.2'
+    id 'io.freefair.lombok' version '8.14.4'
     id 'org.sonarqube' version '6.3.1.5724'
     id 'pmd'
-    id 'com.github.hmcts.rse-cft-lib' version '0.19.2017'
+    id 'com.github.hmcts.rse-cft-lib' version '0.19.2121'
 }
 
 group = 'uk.gov.hmcts.et'
@@ -137,13 +137,13 @@ allprojects {
         resolutionStrategy.force(
             'commons-fileupload:commons-fileupload:1.6.0',
             'org.apache.httpcomponents:httpclient:4.5.14',
-            'org.apache.logging.log4j:log4j-core:2.25.3',
-            'com.nimbusds:nimbus-jose-jwt:10.5',
+            'org.apache.logging.log4j:log4j-core:2.25.4',
+            'com.nimbusds:nimbus-jose-jwt:10.9',
             'net.minidev:json-smart:2.5.2',
             'com.squareup.okhttp3:logging-interceptor:4.12.0',
             'com.squareup.okhttp3:okhttp:4.12.0',
             'com.squareup.okhttp3:okhttp-urlconnection:4.12.0',
-            'com.squareup.okio:okio:3.16.4',
+            'com.squareup.okio:okio:3.17.0',
             // CVE-2020-29582 - Fixed in Kotlin 2.1.0+
             'org.jetbrains.kotlin:kotlin-stdlib:2.1.0',
             'org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.0',
@@ -167,7 +167,9 @@ allprojects {
             'io.netty:netty-transport-native-kqueue:4.2.12.Final',
             'io.netty:netty-transport-native-unix-common:4.2.12.Final',
             'io.netty:netty-transport-classes-epoll:4.2.12.Final',
-            'io.netty:netty-transport-classes-kqueue:4.2.12.Final'
+            'io.netty:netty-transport-classes-kqueue:4.2.12.Final',
+            // CVE-2026-22748, CVE-2026-22746
+            'org.springframework.security:spring-security-crypto:6.5.10'
         )
     }
 }
@@ -388,11 +390,11 @@ integration.shouldRunAfter(test)
 ext {
     junitJupiterVersion = '5.13.4'
     junitPlatformVersion = '1.13.4'
-    log4JVersion = '2.25.3'
+    log4JVersion = '2.25.4'
     pact_version = '4.3.10'
     reformLoggingVersion = '6.0.1'
     serenity = '3.9.8'
-    tomcatEmbedVersion = '10.1.52'
+    tomcatEmbedVersion = '10.1.54'
     jacksonVersion = '2.18.3'
 }
 
@@ -400,8 +402,10 @@ ext["rest-assured.version"] = '5.1.0'
 
 dependencyManagement {
     dependencies {
-        dependency 'org.apache.httpcomponents.core5:httpcore5:5.4.1'
-        dependencySet(group: 'com.google.guava', version: '33.4.8-jre') {
+        dependency 'org.apache.httpcomponents.core5:httpcore5:5.4.2'
+        // CVE-2026-22748, CVE-2026-22746 - force override above the Spring Boot BOM
+        dependency 'org.springframework.security:spring-security-crypto:6.5.10'
+        dependencySet(group: 'com.google.guava', version: '33.6.0-jre') {
             entry 'guava'
         }
         dependencySet(group: 'io.netty', version: '4.2.12.Final') {
@@ -433,38 +437,39 @@ dependencies {
     implementation project(':et-shared')
     implementation group: 'uk.gov.dwp.regex', name: 'postcode-validation', version: '1.1.0'
     implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.2'
-    implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.4'
+    implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.5'
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.2'
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.59.2'
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
     implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'
     implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'
-    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '10.5'
+    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '10.9'
 
     // Log4J core added to remove startup error message
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4JVersion
     // CVE-2025-54988
     implementation group: 'org.apache.tika', name: 'tika-core', version: '3.2.3'
 
-    implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.22.0'
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
-    implementation group: 'io.netty', name: 'netty-tcnative-classes', version: '2.0.74.Final'
+    implementation group: 'io.netty', name: 'netty-tcnative-classes', version: '2.0.77.Final'
     implementation group: 'org.json', name: 'json', version: '20250107'
     implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.28.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18.0'
     implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.5.1'
-    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.4.1'
+    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.4.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
     implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
-    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.0-RC1'
+    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.7'
     implementation group: 'org.apache.santuario', name: 'xmlsec', version: '4.0.4'
     implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: tomcatEmbedVersion
     implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: tomcatEmbedVersion
-    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '6.5.3'
+    // CVE-2026-22732, CVE-2026-22748, CVE-2026-22746
+    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '6.5.10'
     //To Remove vulnerability CVE-2020-11988
     implementation group: 'org.apache.xmlgraphics', name: 'xmlgraphics-commons', version: '2.11'
     implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.7'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.10'
     implementation group: 'org.slf4j', name: 'slf4j-ext', version: '2.0.17'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
@@ -474,7 +479,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.2'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.3.2'
     implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.12'
     // CVE-2022-25857
     implementation group: 'org.yaml', name: 'snakeyaml', version: '2.5'
@@ -485,17 +490,25 @@ dependencies {
     implementation group: 'org.webjars', name: 'webjars-locator-core', version: '0.59'
     implementation group: 'org.asynchttpclient', name: 'async-http-client-netty-utils', version: '2.12.4'
     implementation group: 'com.fasterxml.woodstox', name: 'woodstox-core', version: '7.1.1'
-    implementation group: 'com.squareup.okio', name: 'okio', version: '3.16.4'
+    implementation group: 'com.squareup.okio', name: 'okio', version: '3.17.0'
     // Updated from 1.5.6 to fix CVE-2024-12798, CVE-2024-12801, CVE-2025-11226, CVE-2026-1225
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.26'
-    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.26'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.32'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.32'
     // CVE-2025-48734
     implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.11.0'
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
-    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.10.2'
+    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.13.4'
 
+    implementation group: 'com.github.hmcts', name: 'befta-fw', version: '9.2.6_CCD-7522', {
+        exclude group: 'org.apache.commons', module: 'commons-compress'
+        exclude group: 'com.google.guava', module: 'guava'
+        exclude group: 'org.apache.poi', module: 'poi-ooxml'
+        exclude group: 'org.apache.poi', module: 'poi'
+        exclude group: 'com.launchdarkly', module: 'launchdarkly-java-server-sdk'
+        exclude group: 'org.codehaus.groovy', module: 'groovy-xml'
+    }
     // CVE-2025-7962
-    implementation group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.4'
+    implementation group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.5'
 
     runtimeOnly group: 'com.squareup.okio', name: 'okio-jvm', version: '3.16.4'
     compileOnly 'org.projectlombok:lombok'
@@ -524,8 +537,8 @@ dependencies {
     testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-engine', version: junitPlatformVersion
     testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: junitPlatformVersion
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.3'
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.4'
+    testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.4'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.7'
     testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.17.5'
     // Mockito 5.0.0+ has merged mockito-inline into mockito-core
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.19.0'
@@ -534,12 +547,12 @@ dependencies {
     testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.17.7'
     testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.17.7'
     testImplementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '4.12.0'
-    testRuntimeOnly 'com.h2database:h2:2.2.224'
+    testRuntimeOnly 'com.h2database:h2:2.4.240'
 
     // Contract Tests
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.6.20'
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: '4.1.43'
-    contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.3.0'
+    contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitJupiterVersion
@@ -547,18 +560,18 @@ dependencies {
     contractTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: junitPlatformVersion
     contractTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: junitPlatformVersion
     contractTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-engine', version: junitPlatformVersion
-    contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.2'
+    contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.3.2'
     contractTestImplementation sourceSets.main.runtimeClasspath
     contractTestImplementation sourceSets.test.runtimeClasspath
 
-    integrationTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.21.0'
+    integrationTestImplementation group: 'commons-io', name: 'commons-io', version:  '2.22.0'
     integrationTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
     integrationTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitJupiterVersion
     integrationTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitJupiterVersion
     integrationTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: junitPlatformVersion
     integrationTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-engine', version: junitPlatformVersion
     integrationTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: junitPlatformVersion
-    integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.40'
+    integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.46'
 
     cftlibImplementation group: 'org.mockito', name: 'mockito-core', version: '5.19.0'
     cftlibImplementation 'org.springframework.boot:spring-boot-devtools'
@@ -619,6 +632,12 @@ bootWithCCD {
     //environment 'SERVICEBUS_FAKE', 'true'*
     environment 'CFTLIB_EXTRA_COMPOSE_FILES', ''
 
+}
+
+tasks.register('highLevelDataSetup', JavaExec) {
+    mainClass = "uk.gov.hmcts.ethos.replacement.docmosis.config.HighLevelDataSetupConfiguration"
+    classpath += sourceSets.main.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 pmdMain.maxFailures = 0
